[package]
name = "walter"
version = "0.1.0"
authors = ["Alexander McKinney <alexander.f.mckinney@durham.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11", features = ["max_level_trace"] }
env_logger =  "0.7.1"
strum = "0.18.0"
strum_macros = "0.18.0"
